# sbsmsview

./: .gdb_history  Makefile.am  Makefile.in  README.md  aclocal.m4  blorb  configure  configure.ac  configure.ac~
JuceLibraryCode/: AppConfig.h  JuceHeader.h
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
m4/.svn/: all-wcprops  entries
mac/: Info.plist  Info.plist~
src/: .wakatime-project  Audio.cpp  Audio.h  Main.cpp  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  TODO  TimeFrequencyView.cpp  TimeFrequencyView.h  bla  bla.cpp  blob  buffer.h  config.h.in  convert.cpp  convert.h  dBTable.cpp  dBTable.h  ffmpeg.cpp  ffmpeg.h  grain.cpp  grain.h  import.cpp  libsbsms.la  lpc.cpp  mp3.cpp  sbsms.cpp  sbsms.h  sms.beforedupmucking  sms.cpp  sms.h  sms.ok  sort  sort.cpp  subband.cpp  subband.h  synth.cpp  synthTable.cpp  (+6 more)
src/.svn/: all-wcprops  dir-prop-base  entries
src/gl-matrix/: Makefile  gl-matrix.h  mat3.c  mat4.c  quat.c  vec3.c
